# C-Heap-Allocator-Reimplementation

./: .gitignore  CMakeLists.txt  README.md  run.sh  tags
.cache/clangd/index/: include_test.c.3EC4EA2DD5451FC8.idx  include_test.h.8A408D9392C2639C.idx  main.c.93A860AB649D116B.idx  math_lib.c.31693E1B92DE61D9.idx  math_lib.h.36CEC0F2A40D8235.idx
include/: .mem_chunk.h.swp  .n_allocator.h.swp  heap.h  mem_chunk.h  mem_chunk_list.h  misc.h  n_allocator.h  n_allocator_internal.h  n_allocator_printer.h  n_allocator_shared.h  n_reallocator.h
src/: heap.c  main.c  mem_chunk.c  mem_chunk_list.c  n_allocator.c  n_allocator_internal.c  n_allocator_printer.c  n_allocator_shared.c  n_reallocator.c
